# jcode

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  OAUTH.md  README.md  TELEMETRY.md  build.rs  codemagic.yaml
.github/: pull_request_template.md
.specify/: init-options.json  integration.json
amazon-livecode-mock/: README.md  index.html
crates/jcode-workflow/: Cargo.toml
crates/jcode-workflow/src/: lib.rs  ralplan.rs
docs/: CLAUDE_REVIEWED_FOLLOW_UP_PLAN.md  CODE_QUALITY_TODO.md  COMPILE_PERFORMANCE_PLAN.md  DESKTOP_FIRST_PROTOTYPE.md  JCODE_WORKFLOW_MODES_PLAN.md  MOBILE_AGENT_SIMULATOR.md  MOBILE_SIMULATOR_WORKFLOW.md  MODULAR_ARCHITECTURE_RFC.md  OVERNIGHT_AUTONOMOUS_RUNBOOK.md  OVERNIGHT_SELFDEV_RELOAD_PROMPT.md  PR_FEEDBACK_WATCH_CLAUDE_REVIEW.md  PR_FEEDBACK_WATCH_INTEGRATION_PLAN.md  PR_WATCH_BOUNDED_MONITOR_DESIGN.md  REFACTORING.md  SECURITY_DEPENDENCIES.md
ios/: SIMULATOR_FOUNDATION.md  project.yml
scripts/: auth_regression_matrix.sh  bench_compile.sh  bench_memory_cli.py  bench_selfdev_checkpoints.sh  build_linux_compat.sh  check_warning_budget.sh  code_size_budget.json  create_jcode_pr.sh  dev_cargo.sh  install-jcode-github-context-desktop.sh  install.ps1  install.sh  install_jcode_dev.sh  install_release.sh  jcode-dev.sh  jcode-github-context.sh  jcode_harbor_agent.py  mermaid_fit_probe.py  mobile_simulator_tester.sh  overnight_status.py  panic_budget.json  profile_remote_resume_burst.py  refactor_phase1_verify.sh  remote_build.sh  run_terminal_bench_campaign.py  security_preflight.sh  test_size_budget.json
src/: agent.rs  agent_tests.rs  (+54 more)
(+451 files in other folders)
